[package]
name = "ufolib-rs"
version = "0.1.0"
authors = ["Nikolaus Waxweiler <madigens@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
norad = { path = "../linebender/norad", version = "*" }
pyo3 = "0.12.1"
