[package]
name = "ufolib_rs"
version = "0.1.0"
authors = ["Nikolaus Waxweiler <madigens@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ufolib_rs"
crate-type = ["cdylib"]

[dependencies]
norad = { path = "../linebender/norad", version = "*" }
pyo3 = { version = "0.12.1", features = ["extension-module"] }
